--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
-    "axios": "^0.21.1",
+    "axios": "^1.6.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
+    "react-router-dom": "^6.22.3",
+    "react-scripts": "^5.0.1",
     "reactstrap": "^8.9.0",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.1.0"
@@ -41,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
